# embedded-usb-host

./: .gitignore  Cargo.toml  Changelog.org  README.md  TODO.org  rustfmt.toml  watch_rtt.sh
examples/bootkbd/: Cargo.toml  Embed.toml  README.md  memory.x
examples/bootkbd/.cargo/: config
examples/bootkbd/src/: main.rs  resource.rs  time.rs
src/: address.rs  control.rs  descriptor.rs  device.rs  driver.rs  endpoint.rs  host.rs  lib.rs  parser.rs  setup.rs  stack.rs
src/atsamd/: error.rs  host.rs  mod.rs  pipe.rs
src/atsamd/pipe/: addr.rs  ctrl_pipe.rs  ext_reg.rs  pck_size.rs  regs.rs  status_bk.rs  status_pipe.rs  table.rs
src/class/: audio.rs  hid.rs  mod.rs
src/driver/: keyboard.rs  midi.rs  mod.rs
src/stm32/: mod.rs  usbh_conf.c
