[package]
name = "embedded-usb-host"
description = "Traits for USB host driver development."
version = "0.1.2"
authors = ["Brian Cully <bjc@kublai.com>", "Francis Lalonde <fralalonde@gmail.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"
categories = ["no-std", "embedded", "hardware-support"]
keywords = ["usb", "usb-host", "hal", "peripheral"]
readme = "README.md"
repository = "https://github.com/fralalonde/usb-host.git"

[dependencies]
heapless = "0.7"
embedded-hal = "0.2"

strum = { version = "0.23", default-features = false }
strum_macros = "0.23"

atsamd-hal = { version = "0.14", optional = true }

stm32f4xx-hal = { version = "0.13", features = ["otg-fs"], optional = true }

hash32 = "0.2"
hash32-derive = "0.1"
static_assertions = "1.1.0"

# TODO make defmt & hash32 optional
defmt = { version = "0.3", optional = true}
log = { version = "0.4", optional = true }

# TODO make USB descriptor string handling optional
utf16string = { git = "https://github.com/fralalonde/utf16string.git", branch = "defmt", default-features = false, features = ["defmt"] }

# TODO MIDI driver required crates, make optional
#spin = "0.9"
spin = { path = "../spin-rs", features = ["portable_atomic"] }
embedded-midi = { git = "https://github.com/fralalonde/embedded-midi.git", branch = "main" }
#embedded-midi = { path = "../embedded-midi", features = ["defmt"] }

[features]
default = ["defmt"]
# either defmt or log must be specified
log = ["dep:log"]
defmt = ["dep:defmt"]

atsamd = ["atsamd-hal"]

samd11c = ["atsamd", "atsamd-hal/samd11c"]
samd21e = ["atsamd", "atsamd-hal/samd21e"]
samd21g = ["atsamd", "atsamd-hal/samd21g"]
samd21j = ["atsamd", "atsamd-hal/samd21j"]
samd51g = ["atsamd", "atsamd-hal/samd51g"]
samd51j = ["atsamd", "atsamd-hal/samd51j"]
samd51n = ["atsamd", "atsamd-hal/samd51n"]
samd51p = ["atsamd", "atsamd-hal/samd51p"]
same51g = ["atsamd", "atsamd-hal/same51g"]
same51j = ["atsamd", "atsamd-hal/same51j"]
same51n = ["atsamd", "atsamd-hal/same51n"]
same53j = ["atsamd", "atsamd-hal/same53j"]
same53n = ["atsamd", "atsamd-hal/same53n"]
same54n = ["atsamd", "atsamd-hal/same54n"]
same54p = ["atsamd", "atsamd-hal/same54p"]

# TODO add more STM32 targets
stm32f411 = [ "stm32f4xx-hal/stm32f411", "stm32f4xx-hal/usb_fs"]